--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -3,11 +3,25 @@ version: '3.4'
 services:
   catalogdb:
     image: mongo
+
+  basketdb:
+    image: redis:alpine
+
+  portainer:
+    image: portainer/portainer-ce
+
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
       context: .
       dockerfile: Service/Catalog/Catalog.API/Dockerfile
 
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basketapi
+    build:
+      context: .
+      dockerfile: Service/Basket/Basket.API/Dockerfile
+
 volumes:
-  mongo_data: 
+  mongo_data:
+  portainer_data:
