--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -34,9 +34,16 @@ services:
       context: .
       dockerfile: Service/Discount/Discount.API/Dockerfile
 
+  discount.grpc:
+    image: ${DOCKER_REGISTRY-}discountgrpc
+    build:
+      context: .
+      dockerfile: Service/Discount/Discount.Grpc/Dockerfile
+
 volumes:
   mongo_data:
   portainer_data:
   postgres_data:
   pgadmin_data:
+
 
